--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;800&display=swap');
+
+body * {
+  font-family: 'Manrope', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div.nav-bar {
+  background-color: #FDD835;
+  color: #757575;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+div.nav-bar img {
+  height: 20px;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-bar ul {
+  display: flex;
+  margin: 10px 0;
+}
+
+ul > li {
+  display: block;
+  text-decoration: none;
+  list-style: none;
+  margin-right: 15px;
+}
+
+ul > li:last-child {
+  margin-right: 0;
+}
+
+button {
+  height: 40px;
+  width: 200px;
+  border-radius: 4px;
+  border: solid 1px white;
+  margin: 0 15px;
+}
+
+button > span::before {
+  content: "\f007";
 }
