--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -38,6 +38,10 @@ section.section > * {
     padding: 30px;
 }
 
+.section-nav > .nav-profile {
+    padding: 0;
+}
+
 .section-nav li {
     color: #757575;
 }
@@ -74,6 +78,7 @@ main.container {
 
 .aside button {
     margin: 0;
+    font-size: 1em;
     background-color: #fff;
     color: #757575;
     text-align: left;
@@ -91,17 +96,16 @@ main.container {
 }
 
 section ul.nav-profile {
-    padding: 8px 0;
     list-style-type: none;
     display: flex;
     justify-content: space-around;
 }
 
 .nav-profile-item {
+    padding: 8px 20px 0 0;
     font-size: 16px;
     font-weight: 400;
     letter-spacing: 0.5px;
-    padding: 0;
 }
 
 .nav-profile-item:hover {
